--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -79,4 +79,8 @@
         flex-direction: column-reverse;
         margin-bottom: 50px;
     }
+    .footer-top-right{
+        display: flex;
+        flex-direction: column;
+    }
 }
